--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,6 +4,7 @@
   padding: 100px 60px 60px;
   display: flex;
   justify-content: center;
+  background: linear-gradient(to left, #0a0a23, #0a0a23 70%, #0a1c33);
 }
 
 .hero {
