--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,31 +1,64 @@
 .skills {
-    padding: 80px 20px;
-    background-color: #0A0A23;
-    
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-  }
-  
-  .skills h2 {
-    font-size: 2rem;
-    margin-bottom: 30px;
-    color: #FFF;
-  }
-  
-  .icons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    font-size: 3rem;
-  }
-  
-  .icons svg {
-    transition: transform 0.3s ease;
-  }
-  
-  .icons svg:hover {
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-  
+  padding: 80px 20px;
+  background-color: #0A0A23;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  color: #FFF;
+  background: linear-gradient(to left, #0a0a23, #0a0a23 70%, #0a1c33);
+}
+.underline {
+  height: 3px;
+  background-color: #00d8ff;
+  width: 20%;
+  margin-left: 600px;
+}
+.skills h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.circle {
+  position: relative;
+  width: 425px;
+  height: 360px;
+  margin: 0 auto;
+  margin-top: 63px;
+}
+
+.rotate {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: spin 20s linear infinite;
+  transform-origin: center;
+}
+
+.item {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 3rem;
+}
+
+.item:nth-child(1) { top: 0; left: 50%; transform: translateX(-50%); }
+.item:nth-child(2) { top: 20%; left: 85%; transform: translate(-50%, -50%); }
+.item:nth-child(3) { top: 50%; left: 100%; transform: translate(-50%, -50%); }
+.item:nth-child(4) { top: 80%; left: 85%; transform: translate(-50%, -50%); }
+.item:nth-child(5) { bottom: 0; left: 50%; transform: translateX(-50%); }
+.item:nth-child(6) { top: 80%; left: 15%; transform: translate(-50%, -50%); }
+.item:nth-child(7) { top: 50%; left: 0%; transform: translate(-50%, -50%); }
+.item:nth-child(8) { top: 20%; left: 15%; transform: translate(-50%, -50%); }
+
+.item svg {
+  transition: transform 0.3s ease;
+}
+
+.item svg:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
